--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meetdevs",
+  "name": "movies",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,16 +10,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "g": "node ./node_modules/react-autocode/dist/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,5 +40,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.2",
+    "react-autocode": "^1.0.4"
   }
 }
